--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "engines": {
     "node": "20.x"
   },
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -20,11 +19,13 @@
     "react-syntax-highlighter": "^16.1.0"
   },
   "devDependencies": {
+    "@rollup/wasm-node": "^4.53.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
+    "rollup": "^4.9.6",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8"
   }
