--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "katex": "^0.16.25",
     "lucide-react": "^0.263.1",
     "mammoth": "^1.11.0",
     "pdfjs-dist": "^5.4.394",
@@ -19,7 +20,9 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
